# Capstone-Project-Team-4

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  COMPONENT_DEPENDENCIES.md  DEMO_GUIDE.md  DEMO_READY.md  DEMO_SCRIPT.md  LICENSE  MVP_TEAM_BREAKDOWN.md  Makefile  QUICK_DEMO_CHECKLIST.md  README.md  SPRINT_1_SUMMARY.md  TECHNICAL_DEEP_DIVE.md  demo_script.py  pyproject.toml  requirements-simple.txt  requirements.txt  run_tests.py  setup.py  start_servers.sh  test_enhanced_generation.py  test_generation.py
config/: settings.py
docs/: API.md  ARCHITECTURE.md
scripts/: build_indexes.py  ingest_patents.py
src/patent_assistant/: __init__.py
src/patent_assistant/api/: __init__.py  main.py
src/patent_assistant/database/: __init__.py  schema.py
src/patent_assistant/generation/: __init__.py  draft_generator.py  export.py  llm_client.py  memo_generator.py  prompts.py  prompts_fast.py
src/patent_assistant/models/: __init__.py  core.py
src/patent_assistant/parsers/: __init__.py
src/patent_assistant/retrieval/: __init__.py
src/patent_assistant/tests/: __init__.py  test_models.py
src/patent_assistant/ui/: __init__.py  main.py
tests/: __init__.py  test_system.py
