[project]
name = "patent-partners-assistant"
version = "0.1.0"
description = "Offline Patent Assistant MVP - Team 4 Patent Partners"
authors = [
    {name = "Team 4 Patent Partners", email = "team4@patentpartners.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/nandanpabolu/Capstone-Project-Team-4"
Repository = "https://github.com/nandanpabolu/Capstone-Project-Team-4"
Issues = "https://github.com/nandanpabolu/Capstone-Project-Team-4/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["src/patent_assistant/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]